# blog

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.yaml  db.session.sql  mime.types
.github/workflows/: build.yml
asset/: github-markdown.css  style.css
backend/: Cargo.toml  build.rs
backend/entity/: Cargo.toml
backend/entity/src/: article.rs  article_tag.rs  lib.rs  metadata.rs  prelude.rs  tag.rs
backend/migration/src/: lib.rs  m20240118_000001_create_table.rs  m20240204_000001_create_table.rs
backend/src/: article_manager.rs  config.rs  db.rs  logging.rs  main.rs  site.rs  text.rs  util.rs
backend/src/server/: archive.rs  article.rs  asset.rs  auth.rs  editor.rs  index.rs  mod.rs  request_logger.rs  search.rs  server.rs
frontend/: Cargo.toml  build.rs
frontend/src/: editor.rs  lib.rs  scroll_to_top.rs  util.rs
proto/: article.proto  search.proto
template/: archive.html  article.html  base.html  editor.html  index.html
