[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
entity = { path = "entity" }
futures = "0.3.30"
hashbrown = "0.14"
log = "0.4.20"
migration = { path = "migration" }
minify-html = "0.15.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
prost = "0.12.3"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tera = "1.19.1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["auth"] }
tracing = "0.1.40"
tracing-subscriber  = "0.3.18"

[build-dependencies]
anyhow = "1.0.79"
prost-build = "0.12"
