[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
prost = "0.12.3"
pulldown-cmark = "0.10.0"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = [
    "CssStyleDeclaration",
    "Element",
    "HtmlCollection",
    "ScrollBehavior",
    "ScrollToOptions",
] }
yew = { version = "0.21.0", features = ["csr"] }

[build-dependencies]
anyhow = "1.0.79"
prost-build = "0.12"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
